--- a/index.html
+++ b/index.html
@@ -36,20 +36,27 @@
       <p>Me encuentro cursando Jóvenes a Programar y pienso continuar mis estudios con una Licenciatura en Tecnologías de la Información.</p>
       </div>
       <h3>Tecnologías con las que trabajo</h3>
-      <a> <img src="imgs/technologies.png" alt="technologies"  class="technologies"/> </a>
+      <a> <img src="imgs/html.webp" alt="html" class="technologies"/> </a>
+      <a> <img src="imgs/css.webp" alt="css"  class="technologies"/> </a>
+      <a> <img src="imgs/js.webp" alt="js"  class="technologies"/> </a>
+      <a> <img src="imgs/git.webp" alt="git"  class="technologies"/> </a>
     </section>
 
     <!-- Proyectos -->
-<h2 class="titulo">Mis proyectos</h2>
-    <div>
-    <div class="cajita">
-    <a href="https://rodrituca.github.io/e-commerce/index.html"> <img src="imgs/e-commerce.png" alt="e-commerce"/> </a>
-    <h3>e-commerce | JaP</h3>
-    <p>Proyecto final de JaP donde junto a mi equipo corregimos y añadimos funcionalidades a un e-commerce. </p>
-  </div>
-  </div>
+    <h2 class="titulo">Mis proyectos</h2>
+    <div class="projects">
+    <a href="https://rodrituca.github.io/e-commerce/index.html">
+    <img src="imgs/e-commerce.png" alt="E-commerce">
+    </a>
+    </div>
+
+    <div class="projects">
+    <a href="https://rodrituca.github.io/e-commerce/index.html">
+    <img src="imgs/e-commerce.png" alt="E-commerce">
+    </a>
+    </div>
 
 
-<footer style="position: fixed; bottom:0; width:100%;">Contacto: turrionezequiel@gmail.com</footer>
+<footer style="bottom:0; width:100%;">Contacto: turrionezequiel@gmail.com</footer>
 </body>
 </html>
